--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,5 +2,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
 
 html {
-	background-color: #0d0d0d;
+	background-color: #fff;
 }
